--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -853,7 +853,7 @@ service console /system/bin/sh
     seclabel u:r:shell:s0
     setenv HOSTNAME console
 
-on property:ro.debuggable=1
+on property:ro.debuggable=1 && property:ro.console.enable=1
     # Give writes to anyone for the trace folder on debug builds.
     # The folder is used to store method traces.
     chmod 0773 /data/misc/trace
